Add search/ filter logic